--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -39,8 +39,7 @@ page-home {
   .empty-list {
     background-color: rgba(0, 0, 0, 0);
     font-family: 'TitilliumWeb Bold';
-    color: #2e3849;
-    text-shadow: #fff 0px 0px 1px;
+    color: black;
   }
 
   .list-item {
