--- a/src/pages/order-tag/order-tag.scss
+++ b/src/pages/order-tag/order-tag.scss
@@ -36,7 +36,7 @@ page-order-tag {
     text-align: center;
   }
 
-  form ion-input.ng-invalid:not(.ng-pristine) {
+  form #address-input.ng-invalid:not(.ng-pristine) {
     //box-shadow: 0px 0px 13px rgba(255, 133, 0, 0.9);
     border-bottom: 1px solid red;
   }
